TRACEFOSS-471: Fix sonar issues